force-app/main/default/objects/Keywords__c/Keywords__c.object-meta.xml
<CustomObject>
    <label>Keyword</label>
    <nameField>
        <displayFormat>K-{000}</displayFormat>
        <label>Keyword</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keywords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>