force-app/main/default/objects/Keywords__c/fields/Committee_Master__c.field-meta.xml
<CustomField>
    <fullName>Committee_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee Master</label>
    <referenceTo>Committee_Master__c</referenceTo>
    <relationshipLabel>Keywords</relationshipLabel>
    <relationshipName>Keywords</relationshipName>
    <type>Lookup</type>
</CustomField>