force-app/main/default/objects/Keywords__c/fields/Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>Committee_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee Member</label>
    <referenceTo>Committee_Member__c</referenceTo>
    <relationshipLabel>Keywords</relationshipLabel>
    <relationshipName>Keywords</relationshipName>
    <type>Lookup</type>
</CustomField>