force-app/main/default/objects/Keywords__c/fields/Keyword_Name__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Name__c</fullName>
    <label>Keyword Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>