force-app/main/default/objects/Keywords__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Keywords</relationshipLabel>
    <relationshipName>Keywords</relationshipName>
    <type>Lookup</type>
</CustomField>